--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Gabarito&family=Open+Sans:wght@500&family=Poppins:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Gabarito&family=Open+Sans:wght@500&family=Poppins:wght@500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gabarito&family=Open+Sans:wght@500&family=Poppins:wght@400;500;600&display=swap');
 *{
     margin: 0;
     padding: 0;
     font-family: 'Poppins';
-    --primary-color: #000;
+    --primary-color: #1DA599;
+    --secondary-color: #fff;
     --font-color: #fff;
 }
 
@@ -14,10 +15,9 @@
 .navbar{
     width: 100vw;
     height: 10vh;
-    background-color: #161617CC;
     display: flex;
+    background-color: #1DA599;
     color: var(--font-color);
-    position: fixed;
 }
 
 .navbar-logo{
@@ -42,20 +42,32 @@
 .navbar-item ul{
     display: flex;
     list-style: none;
+    margin-bottom: 0;
+    padding-left: 0;
 }
 
 .navbar-item li{
     margin: 20px;
 }
 
+.btn-nav{
+    padding: 5px;
+    padding-left: 50px;
+    padding-right: 50px;
+    text-decoration: none;
+    background-color: var(--font-color);
+    border-radius: 24px;
+    color: black;
+}
+
 
 /* ============== MAIN CONTAINER ============== */
 
-.container{
+.main-container{
     width: 100vw;
     height: 100vh;
     display: flex;
-    color: var(--font-color);
+    background-color: #FEFDFB;
 }
 
 /* ============== MAIN CONTAINER (CONTENT) ============== */
@@ -67,106 +79,179 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--primary-color);
 }
 
-
-.brand-content h1{
-    font-size: 4em; 
+.brand-content{
+    padding: 2%;
 }
 
-.spinwords{
-    height: 100px;
-    overflow: hidden;
+.brand-content span{
+    font-size: 2em;
 }
 
-.spinwords span{
-    display: block;
-    height: 100px;
-    animation: spin_words 6s infinite;
-    overflow: hidden;
-    font-size: 4em;
-    margin-right: 7px;
-    text-align: center;
-}
-
-@keyframes spin_words{
-    10%{
-        transform: translateY(-112%);
-    }
-    25%{
-        transform: translateY(-100%);
-    }
-    35%{
-        transform: translateY(-212%);
-    }
-    50%{
-        transform: translateY(-200%);
-    }
-    60%{
-        transform: translateY(-312%);
-    }
-    75%{
-        transform: translateY(-300%);
-    }
-    85%{
-        transform: translateY(-412%);
-    }
-    100%{
-        transform: translateY(-400%);
-    }
-}
-
-.brand-text{
-    display: flex;
-}
-/* ============== MAIN CONTAINER (BUTTON) ============== */
-/* .brand-content button{
-    margin-top: 50px;
-    margin-right: 5px;
-    padding: 10px;
-    color: var(--font-color);
-    background-color: blue;
-    border: none;
-    border-radius: 24px;
-} */
-
-.search{
-    width: 100%;
-    height: 30%;
+.subtext{
+    font-size: 20px;
     margin-top: 20px;
-    padding-left: 40px;
-    border: none;
-    box-sizing: border-box;
 }
 
-.search input{
-    
+.location {
+    background-color: #E7F3F0;
+    border-radius: 8px;
+    padding: 5px;
 }
+
+.location p{
+    margin-bottom: 0;
+}
+
+
+
+/* ============== MAIN CONTAINER (BUTTON) ============== */
+
+.btn-container{
+    padding: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
+    text-decoration: none;
+    background-color: burlywood;
+    border-radius: 24px;
+    color: white;
+    font-size: 14px;
+}
+
 
 /* ============== MAIN CONTAINER (PHOTOS) ============== */
 
 .brand-photo{
     width: 40%;
     height: 100%;
-    background-color: var(--primary-color);
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(https://www.usatoday.com/gcdn/presto/2018/11/09/USAT/53e4b473-1b5e-44f8-a692-5ac154734f32-IMG_8189.JPG);
+    background-image: url(https://rodja.info/site/wp-content/uploads/2018/12/WhatsApp-Image-2018-12-14-at-17.16.09-1-1024x640.png);
     background-size: cover;
     background-position: center;
 }
 
 .brand-photo img{
-    width: 100%;
+    width: 80%;
     
 }
 
 /* ============== MISSION CONTAINER (MAIN) ============== */
-
 .mission-container{
     width: 100vw;
-    height: 100vh;
+    height: fit-content;
+    padding: 3%;
+}
+
+/* ============== MISSION CONTAINER (NEWS) ============== */
+.news{
+    width: 100vw;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10vh;
+}
+
+.text-title{
+    font-size: 3em;
+}
+
+.news-content{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    overflow: auto;
+    grid-template-columns: 20%, 20%, 20%;
+    
+
+}
+
+.news-card{
+    min-width: 30%;
+    max-width: 30%;
+    max-height: 80%;
     background-color: var(--primary-color);
+    margin: 3%;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2%;
+    color: var(--font-color);
+    font-weight: 300;
+    text-align: center;
+}
+
+.news-card img{
+    width: 100%;
+    border-radius: 14px;
+    margin-bottom: 10px;
+}
+
+.news-card p{
+    margin-top: 20px;
+}
+
+.btn-news{
+    margin-top: 30px;
+    padding: 5px;
+    padding-left: 50px;
+    padding-right: 50px;
+    text-decoration: none;
+    background-color: var(--font-color);
+    border-radius: 24px;
+}
+
+.read-card{
+    min-width: 30%;
+    max-width: 30%;
+    max-height: 80%;
+    background-color: var(--primary-color);
+    margin: 3%;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2%;
+    color: var(--font-color);
+    font-weight: 300;
+    text-align: center;
+}
+
+footer{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+}
+
+.footer-content{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: #1DA599;
+    justify-content: center;
+    padding: 2%;
+    color: var(--font-color);
+}
+
+.footer-image{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(https://rodja.info/site/wp-content/uploads/2018/12/WhatsApp-Image-2018-12-14-at-17.16.09-1-1024x640.png);
+    background-size: cover;
+    background-position: center;
+}
+
+.trademark{
+    font-size: 12px;
+    color: #e7e7e7;
 }
